deals area design done

--- a/index.html
+++ b/index.html
@@ -603,6 +603,380 @@
         </div>
       </section>
       <!-- best sells area end here -->
+
+      <!-- deals area start here -->
+      <section class="deals_area">
+        <div class="container">
+          <div class="section_title" style="justify-content: space-between">
+            <h2 class="title">Featured Categories</h2>
+          </div>
+          <div class="deals_card_wrapper">
+            <!-- single deal card -->
+            <div class="deals_card">
+              <div class="deal_img">
+                <img src="assets/img/deals/1.jpg" alt="" />
+              </div>
+              <div class="deals_content">
+                <div class="deal_time">
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                </div>
+                <div class="deal_details">
+                  <a href="#" class="title"
+                    >Seeds of Change Organic Quinoa, Brown, & Red Rice</a
+                  >
+                  <img src="assets/img/products/star.png" alt="" />
+                  <p class="provider">By<span> NestFood</span></p>
+                  <div class="price_cart">
+                    <p>$54.85 <span>$55.0</span></p>
+                    <a href="#"
+                      ><img src="assets/img/deals/cart.svg" alt="" />Add</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single deal card -->
+            <div class="deals_card">
+              <div class="deal_img">
+                <img src="assets/img/deals/1.jpg" alt="" />
+              </div>
+              <div class="deals_content">
+                <div class="deal_time">
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                </div>
+                <div class="deal_details">
+                  <a href="#" class="title"
+                    >Seeds of Change Organic Quinoa, Brown, & Red Rice</a
+                  >
+                  <img src="assets/img/products/star.png" alt="" />
+                  <p class="provider">By<span> NestFood</span></p>
+                  <div class="price_cart">
+                    <p>$54.85 <span>$55.0</span></p>
+                    <a href="#"
+                      ><img src="assets/img/deals/cart.svg" alt="" />Add</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single deal card -->
+            <div class="deals_card">
+              <div class="deal_img">
+                <img src="assets/img/deals/1.jpg" alt="" />
+              </div>
+              <div class="deals_content">
+                <div class="deal_time">
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                </div>
+                <div class="deal_details">
+                  <a href="#" class="title"
+                    >Seeds of Change Organic Quinoa, Brown, & Red Rice</a
+                  >
+                  <img src="assets/img/products/star.png" alt="" />
+                  <p class="provider">By<span> NestFood</span></p>
+                  <div class="price_cart">
+                    <p>$54.85 <span>$55.0</span></p>
+                    <a href="#"
+                      ><img src="assets/img/deals/cart.svg" alt="" />Add</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single deal card -->
+            <div class="deals_card">
+              <div class="deal_img">
+                <img src="assets/img/deals/1.jpg" alt="" />
+              </div>
+              <div class="deals_content">
+                <div class="deal_time">
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                  <div class="single_time">
+                    <span>00</span>
+                    <p>Days</p>
+                  </div>
+                </div>
+                <div class="deal_details">
+                  <a href="#" class="title"
+                    >Seeds of Change Organic Quinoa, Brown, & Red Rice</a
+                  >
+                  <img src="assets/img/products/star.png" alt="" />
+                  <p class="provider">By<span> NestFood</span></p>
+                  <div class="price_cart">
+                    <p>$54.85 <span>$55.0</span></p>
+                    <a href="#"
+                      ><img src="assets/img/deals/cart.svg" alt="" />Add</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="single_deal_wrapper">
+            <!-- single deal -->
+            <div class="single_deal">
+              <h3 class="title">Top Selling</h3>
+              <div class="deal_item">
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single deal -->
+            <div class="single_deal">
+              <h3 class="title">Top Selling</h3>
+              <div class="deal_item">
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single deal -->
+            <div class="single_deal">
+              <h3 class="title">Top Selling</h3>
+              <div class="deal_item">
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single deal -->
+            <div class="single_deal">
+              <h3 class="title">Top Selling</h3>
+              <div class="deal_item">
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+                <!-- single item -->
+                <div class="single_item">
+                  <div class="item_image">
+                    <img src="assets/img/deals/5.png" alt="" />
+                  </div>
+                  <div class="item_content">
+                    <a href="#" class="title"
+                      >Nestle Original Coffee-Mate Coffee Creamer</a
+                    >
+                    <p class="ratting">
+                      <img src="assets/img/products/star.png" alt="" />(4.0)
+                    </p>
+                    <p class="price">$54.85 <span>$55.0</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- deals area end here -->
     </main>
     <!-- main body end here -->
 
