subscribe and addon area design done

--- a/index.html
+++ b/index.html
@@ -977,8 +977,255 @@
         </div>
       </section>
       <!-- deals area end here -->
+
+      <!-- subscribe area start here -->
+      <section>
+        <div class="container">
+          <div
+            class="row hero-banner"
+            style="background-image: url(assets/img/hero-banner.jpg)"
+          >
+            <div class="col">
+              <div class="hero-text">
+                <h1>Fresh Vegetables Big discount</h1>
+                <p>Save up to 50% off on your first order</p>
+                <div class="subscribe-wrap">
+                  <div class="subscribe-box">
+                    <input type="email" placeholder="Your email address" />
+                    <button>Subscribe</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="hero-image">
+                <img src="assets/img/hero-fruits.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- subscribe area end here -->
+
+      <!-- adddon area start here -->
+      <div class="addon_area">
+        <!-- single addon -->
+        <div class="single_addon">
+          <div class="addon_img">
+            <img src="assets/img/addon/1.png" alt="" />
+          </div>
+          <div class="addon_text">
+            <h4>Best prices & offers</h4>
+            <span>Onders $50 or more</span>
+          </div>
+        </div>
+        <!-- single addon -->
+        <div class="single_addon">
+          <div class="addon_img">
+            <img src="assets/img/addon/1.png" alt="" />
+          </div>
+          <div class="addon_text">
+            <h4>Best prices & offers</h4>
+            <span>Onders $50 or more</span>
+          </div>
+        </div>
+        <!-- single addon -->
+        <div class="single_addon">
+          <div class="addon_img">
+            <img src="assets/img/addon/1.png" alt="" />
+          </div>
+          <div class="addon_text">
+            <h4>Best prices & offers</h4>
+            <span>Onders $50 or more</span>
+          </div>
+        </div>
+        <!-- single addon -->
+        <div class="single_addon">
+          <div class="addon_img">
+            <img src="assets/img/addon/1.png" alt="" />
+          </div>
+          <div class="addon_text">
+            <h4>Best prices & offers</h4>
+            <span>Onders $50 or more</span>
+          </div>
+        </div>
+        <!-- single addon -->
+        <div class="single_addon">
+          <div class="addon_img">
+            <img src="assets/img/addon/1.png" alt="" />
+          </div>
+          <div class="addon_text">
+            <h4>Best prices & offers</h4>
+            <span>Onders $50 or more</span>
+          </div>
+        </div>
+      </div>
+      <!-- adddon area end here -->
     </main>
     <!-- main body end here -->
+
+    <!-- footer area start here -->
+    <footer class="footer_area">
+      <div class="container">
+        <div class="footer_widget">
+          <!-- single widget -->
+          <div class="single_widget">
+            <div class="footer_logo">
+              <a href="#">
+                <img src="assets/img/logo.png" alt="" />
+              </a>
+            </div>
+            <p class="sub_title">Awesome grocery store website template</p>
+            <div class="contact_info">
+              <div class="single_info">
+                <img src="assets/img/footer/Location.svg" alt="" />
+              </div>
+              <p>
+                <strong>Address:</strong> 5171 W Campbell Ave undefined
+                Kent,Utah 53127 United States
+              </p>
+            </div>
+            <div class="contact_info">
+              <div class="single_info">
+                <img src="assets/img/footer/Location.svg" alt="" />
+              </div>
+              <p>
+                <strong>Address:</strong> 5171 W Campbell Ave undefined
+                Kent,Utah 53127 United States
+              </p>
+            </div>
+            <div class="contact_info">
+              <div class="single_info">
+                <img src="assets/img/footer/Location.svg" alt="" />
+              </div>
+              <p>
+                <strong>Address:</strong> 5171 W Campbell Ave undefined
+                Kent,Utah 53127 United States
+              </p>
+            </div>
+            <div class="contact_info">
+              <div class="single_info">
+                <img src="assets/img/footer/Location.svg" alt="" />
+              </div>
+              <p>
+                <strong>Address:</strong> 5171 W Campbell Ave undefined
+                Kent,Utah 53127 United States
+              </p>
+            </div>
+            <div class="method_wrapper">
+              <h2 class="title">Install App</h2>
+              <p class="text">From App Store or Google Play</p>
+              <div class="image_group">
+                <img src="assets/img/footer/apple-store.svg" alt="" />
+                <img src="assets/img/footer/play-store.svg" alt="" />
+              </div>
+              <p class="text">Secured Payment Gateways</p>
+              <div class="payment_image">
+                <img src="assets/img/footer/visa.png" alt="" />
+                <img src="assets/img/footer/maestro.png" alt="" />
+                <img src="assets/img/footer/maestro1.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <!-- single widget -->
+          <div class="single_widget">
+            <h3 class="widget_title">Company</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+          <!-- single widget -->
+          <div class="single_widget">
+            <h3 class="widget_title">Company</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+          <!-- single widget -->
+          <div class="single_widget">
+            <h3 class="widget_title">Company</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+          <!-- single widget -->
+          <div class="single_widget">
+            <h3 class="widget_title">Company</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- copyright area start here -->
+        <div class="copyright_area">
+          <p class="copyright_text">
+            © 2024,<span>Nest</span>- HTML Ecommerce Template All rights
+            reserved
+          </p>
+          <div class="contact_info">
+            <div class="single_contact">
+              <img src="assets/img/footer/phone.svg" alt="" />
+              <div class="contact_text">
+                <span>1900 - 6666</span>
+                <p>Working 8:00 - 22:00</p>
+              </div>
+            </div>
+            <div class="single_contact">
+              <img src="assets/img/footer/phone.svg" alt="" />
+              <div class="contact_text">
+                <span>1900 - 6666</span>
+                <p>Working 8:00 - 22:00</p>
+              </div>
+            </div>
+          </div>
+          <div class="social_info">
+            <div class="social_icon">
+              <h3>Follow Us</h3>
+              <div class="icons">
+                <a href="#"
+                  ><img src="assets/img/footer/Instagram.svg" alt=""
+                /></a>
+                <a href="#"
+                  ><img src="assets/img/footer/Instagram.svg" alt=""
+                /></a>
+                <a href="#"
+                  ><img src="assets/img/footer/Instagram.svg" alt=""
+                /></a>
+                <a href="#"
+                  ><img src="assets/img/footer/Instagram.svg" alt=""
+                /></a>
+                <a href="#"
+                  ><img src="assets/img/footer/Instagram.svg" alt=""
+                /></a>
+              </div>
+            </div>
+            <p class="text">Up to 15% discount on your first subscribe</p>
+          </div>
+        </div>
+        <!-- copyright area end here -->
+      </div>
+    </footer>
+    <!-- footer area end here -->
 
     <!-- <header class="primary_header">
       <div class="header-top">
