working with footer area

--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
                 <img src="assets/img/footer/apple-store.svg" alt="" />
                 <img src="assets/img/footer/play-store.svg" alt="" />
               </div>
-              <p class="text">Secured Payment Gateways</p>
+              <p class="payment_text">Secured Payment Gateways</p>
               <div class="payment_image">
                 <img src="assets/img/footer/visa.png" alt="" />
                 <img src="assets/img/footer/maestro.png" alt="" />
@@ -1128,7 +1128,7 @@
             </div>
           </div>
           <!-- single widget -->
-          <div class="single_widget">
+          <div class="single_widget" style="margin-left: 50px">
             <h3 class="widget_title">Company</h3>
             <ul>
               <li><a href="#">About Us</a></li>
@@ -1140,7 +1140,7 @@
             </ul>
           </div>
           <!-- single widget -->
-          <div class="single_widget">
+          <div class="single_widget" style="margin-left: 50px">
             <h3 class="widget_title">Company</h3>
             <ul>
               <li><a href="#">About Us</a></li>
@@ -1152,7 +1152,7 @@
             </ul>
           </div>
           <!-- single widget -->
-          <div class="single_widget">
+          <div class="single_widget" style="margin-left: 50px">
             <h3 class="widget_title">Company</h3>
             <ul>
               <li><a href="#">About Us</a></li>
@@ -1164,7 +1164,7 @@
             </ul>
           </div>
           <!-- single widget -->
-          <div class="single_widget">
+          <div class="single_widget" style="margin-left: 50px">
             <h3 class="widget_title">Company</h3>
             <ul>
               <li><a href="#">About Us</a></li>
@@ -1176,10 +1176,13 @@
             </ul>
           </div>
         </div>
+      </div>
+      <div class="devider"></div>
+      <div class="container">
         <!-- copyright area start here -->
         <div class="copyright_area">
           <p class="copyright_text">
-            © 2024,<span>Nest</span>- HTML Ecommerce Template All rights
+            © 2024, <span>Nest</span>- HTML Ecommerce Template All rights
             reserved
           </p>
           <div class="contact_info">
