product details page design done

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="col">
               <!-- hero text -->
               <div class="hero-text">
-                <h1>Fresh Vegetables Big discount</h1>
+                <h1 style="font-size: 40px">Fresh Vegetables Big discount</h1>
                 <p>Save up to 50% off on your first order</p>
                 <div class="subscribe-wrap">
                   <div class="subscribe-box">
